[gd_scene load_steps=12 format=3 uid="uid://d13roc8t5yibe"]

[ext_resource type="Script" path="res://src/gameplay/enemies/enemy.gd" id="1_7uinp"]
[ext_resource type="Script" path="res://src/gameplay/progression/biomat_resource.gd" id="2_q63b0"]
[ext_resource type="Texture2D" uid="uid://ctpq0wqq86qs6" path="res://icon.png" id="2_tchxh"]
[ext_resource type="Script" path="res://src/gameplay/state_machine/state_machine.gd" id="3_6k51w"]
[ext_resource type="Script" path="res://src/gameplay/state_machine/enemy/roam_enemy_state.gd" id="4_p5y1o"]
[ext_resource type="Script" path="res://src/gameplay/state_machine/enemy/dead_enemy_state.gd" id="6_30pte"]
[ext_resource type="Script" path="res://src/gameplay/state_machine/enemy/following_state.gd" id="7_l5nje"]

[sub_resource type="Resource" id="Resource_jjy66"]
script = ExtResource("2_q63b0")
hp_buff = -1.0
speed_buff_percent = -1.0
ability_buff_type = 0
ability_buff = 0.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_chm7k"]
radius = 14.0

[sub_resource type="SpriteFrames" id="SpriteFrames_6oibf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tchxh")
}],
"loop": true,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tchxh")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tchxh")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_o1tkp"]
radius = 157.003

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("coll_shape", "sprite", "raycast", "nav_agent", "state_machine", "state_dead", "state_following")]
collision_layer = 4
collision_mask = 11
motion_mode = 1
wall_min_slide_angle = 0.698132
script = ExtResource("1_7uinp")
biomat_resource = SubResource("Resource_jjy66")
coll_shape = NodePath("CollisionShape2D")
sprite = NodePath("AnimatedSprite2D")
raycast = NodePath("RayCast2D")
nav_agent = NodePath("NavigationAgent2D")
state_machine = NodePath("StateMachine")
state_dead = NodePath("StateMachine/DeadEnemyState")
state_following = NodePath("StateMachine/FollowingState")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.57079
shape = SubResource("CapsuleShape2D_chm7k")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
position = Vector2(0, 31)
sprite_frames = SubResource("SpriteFrames_6oibf")
animation = &"die"
offset = Vector2(0, -32)

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(64, -64)

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_o1tkp")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 40.0
max_speed = 200.0
debug_enabled = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_6k51w")
initial_state = NodePath("RoamEnemyState")

[node name="RoamEnemyState" type="Node" parent="StateMachine" node_paths=PackedStringArray("connections")]
script = ExtResource("4_p5y1o")
connections = [NodePath("../DeadEnemyState"), NodePath("../FollowingState")]

[node name="RoamTimer" type="Timer" parent="StateMachine/RoamEnemyState"]
wait_time = 3.0

[node name="IdleTimer" type="Timer" parent="StateMachine/RoamEnemyState"]
wait_time = 2.0
one_shot = true

[node name="DeadEnemyState" type="Node" parent="StateMachine"]
script = ExtResource("6_30pte")

[node name="FollowingState" type="Node" parent="StateMachine" node_paths=PackedStringArray("debug_label")]
script = ExtResource("7_l5nje")
debug_label = NodePath("../../Label")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -50.0
offset_top = -61.0
offset_right = 50.0
offset_bottom = -38.0
text = "fddf"

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="target_reached" from="NavigationAgent2D" to="StateMachine/FollowingState" method="_on_navigation_agent_2d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="StateMachine/FollowingState" method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="StateMachine/RoamEnemyState/RoamTimer" to="StateMachine/RoamEnemyState" method="_on_roam_timer_timeout"]
[connection signal="timeout" from="StateMachine/RoamEnemyState/IdleTimer" to="StateMachine/RoamEnemyState" method="_on_idle_timer_timeout"]
